--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title >Shopping Dukan</title>
+    <title >Flipkart</title>
   </head>
   <body>
     <h1>API Homepage </h1>Click on a category link to show available products from that category.
