--- a/views/products.html.erb
+++ b/views/products.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-#W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>Shopping Dukan</title>
+    <title>Flipkart</title>
   </head>
   <body>
 		<h2><a href="/">HOME</a> | <a href="/products?url=<%= Base64.encode64(@nextUrl)%>">NEXT >></a></h2>
